# tanoshi

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.CI  LICENSE  LICENSE_MIT  README.md  Tanoshi.desktop  docker-compose.yaml  heroku.yml  index.js  mkdocs.yml  org.luigi311.tanoshi.yml  package.json  postcss.config.js  rust-toolchain.toml  styles.css  tailwind.config.js  webpack.config.js
crates/tanoshi/: Cargo.toml
crates/tanoshi-cli/: Cargo.toml  README.md
crates/tanoshi-cli/src/: data.rs  generate.rs  main.rs  run.rs  test.rs
crates/tanoshi-lib/: Cargo.toml  build.rs
crates/tanoshi-lib/src/: data.rs  error.rs  extensions.rs  lib.rs  prelude.rs  traits.rs
crates/tanoshi-notifier/: Cargo.toml
crates/tanoshi-notifier/src/: gotify.rs  lib.rs  pushover.rs  telegram.rs
crates/tanoshi-schema/: Cargo.toml
crates/tanoshi-schema/graphql/: browse_favorites.graphql  browse_source.graphql  change_password.graphql  delete_user.graphql  download_chapters.graphql  download_status.graphql  fetch_chapter.graphql  fetch_download_queue.graphql  fetch_downloaded_chapters.graphql  fetch_histories.graphql  fetch_manga_by_source_path.graphql  fetch_manga_detail.graphql  fetch_recent_updates.graphql  fetch_server_status.graphql  fetch_source.graphql  fetch_sources.graphql  fetch_users.graphql  install_source.graphql  login.graphql  mark_chapter_as_unread.graphql  migrate_manga.graphql  pause_download.graphql  refresh_chapters.graphql  register.graphql  remove_chapter_from_queue.graphql  schema.graphql  search_tracker_manga.graphql  set_preferences.graphql  subscribe_chapter_updates.graphql  test_desktop_notification.graphql  test_gotify.graphql  track_manga.graphql  update_source.graphql
crates/tanoshi-schema/src/: lib.rs  model.rs
crates/tanoshi-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
crates/tanoshi-tauri/icons/: icon.icns
crates/tanoshi-tauri/src/: main.rs  server.rs
crates/tanoshi-tracker/: Cargo.toml
crates/tanoshi-tracker/src/: anilist.rs  lib.rs  myanimelist.rs
crates/tanoshi-util/: Cargo.toml  README.md
crates/tanoshi-util/src/: http.rs  lib.rs  log.rs  shim.rs
crates/tanoshi-vm/: Cargo.toml
crates/tanoshi-vm/examples/: example.rs  example_js.rs
crates/tanoshi-vm/src/: bus.rs  lib.rs  prelude.rs  vm.rs
crates/tanoshi-web/: Cargo.toml  Trunk.toml  index.html
crates/tanoshi-web/graphql/: add_to_library.graphql  anilist_login_end.graphql  anilist_login_start.graphql  browse_favorites.graphql  browse_source.graphql  create_category.graphql  delete_category.graphql  download_queue.graphql  fetch_all_sources.graphql  fetch_categories.graphql  fetch_category_detail.graphql  fetch_chapter.graphql  fetch_download_queue.graphql  fetch_histories.graphql  fetch_manga_by_source_path.graphql  fetch_manga_detail.graphql  fetch_manga_tracker_status.graphql  fetch_me.graphql  fetch_source.graphql  fetch_source_filters.graphql  fetch_sources.graphql  get_latest_manga.graphql  get_popular_manga.graphql  mark_chapter_as_read.graphql  myanimelist_login_end.graphql  myanimelist_login_start.graphql  myanimelist_logout.graphql  remove_downloaded_chapters.graphql  resume_download.graphql  schema.graphql  test_pushover.graphql  tracker_logout.graphql  untrack_manga.graphql  update_category.graphql  update_chapter_priority.graphql  update_page_read_at.graphql  update_profile.graphql  update_tracker_status.graphql
crates/tanoshi-web/src/: app.rs  catalogue.rs  catalogue_list.rs  histories.rs  lib.rs  library.rs  library_list.rs  login.rs  manga.rs  migration.rs  query.rs  reader.rs  settings.rs  settings_categories.rs  settings_download_queue.rs  settings_manage_downloads.rs  settings_migrate.rs  settings_source.rs  tracker_login.rs  tracker_redirect.rs  updates.rs  utils.rs
crates/tanoshi-web/static/: manifest.webmanifest
crates/tanoshi/migrations/: 202108281025_sqlite.sql  202109112128_sqlite.sql  202109132358_sqlite.sql  202109181411_sqlite.sql  202110311553_sqlite.sql  202111011735_sqlite.sql  202111070722_sqlite.sql  202111101449_sqlite.sql  202111291632_sqlite.sql  202112171827_sqlite.sql  202112171910_sqlite.sql  202112252028_sqlite.sql  202203261515_sqlite.sql  202203271713_sqlite.sql  202206041151_sqlite.sql  202206050001_sqlite.sql  202206052131_sqlite.sql  202206120746_sqlite.sql  202607090000_sqlite.sql
crates/tanoshi/src/: assets.rs  auth.rs  config.rs  context.rs  download.rs  downloads.rs  lib.rs  (+15 more)
crates/tanoshi/src-tauri/: Cargo.toml  tauri.conf.json
tanoshi/: .gitignore  Cargo.toml  README.md
tanoshi-cli/: Cargo.toml
tanoshi-cli/src/: data.rs  extension.rs  generate.rs  main.rs  test.rs
tanoshi-lib/: Cargo.toml
tanoshi-lib/src/: data.rs  error.rs  extensions.rs  lib.rs  prelude.rs  shim.rs  util.rs
tanoshi-util/: Cargo.toml
tanoshi-util/src/: http.rs  lib.rs
tanoshi-vm/: Cargo.toml
tanoshi-vm/src/: bus.rs  extension_bus.rs  extension_thread.rs  lib.rs  prelude.rs  vm.rs
tanoshi-web/: .gitignore  Cargo.toml  build.rs  index.html  index.js  package-lock.json  package.json  styles.css  tailwind.config.js  webpack.config.js
tanoshi-web/graphql/: browse_favorites.graphql  browse_source.graphql  delete_from_library.graphql  fetch_all_sources.graphql  fetch_chapter.graphql  fetch_manga_by_source_path.graphql  fetch_manga_detail.graphql  fetch_me.graphql  fetch_recent_updates.graphql  fetch_server_status.graphql  fetch_source.graphql  fetch_users.graphql  login.graphql  register.graphql  schema.graphql  test_telegram.graphql  uninstall_source.graphql  update_page_read_at.graphql
tanoshi-web/src/: app.rs  catalogue.rs  histories.rs  lib.rs  library.rs  login.rs  manga.rs  query.rs  reader.rs  settings.rs  updates.rs  utils.rs
tanoshi-web/static/: index.html  manifest.json  manifest.webmanifest  sw.js
tanoshi/migration/: 1.sql  2.sql  3.sql  4.sql  tanoshi.sql
tanoshi/migrations/: 20201009122111_sqlite.sql  202105260843_sqlite.sql  202105271603_sqlite.sql  202105291428_sqlite.sql
tanoshi/src/: assets.rs  config.rs  context.rs  extension.rs  lib.rs  local.rs  main.rs  proxy.rs  schema.rs
(+392 files in other folders)
