[workspace]
members = [
    ".",
    "tanoshi-lib",
    "tanoshi-util",
    "tanoshi-cli",
    "tanoshi-web",
    "tanoshi-vm",
]

[package]
name = "tanoshi"
version = "0.24.3"
authors = ["fadhlika"]
edition = "2018"
description = "Tanoshi"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = { path = "./tanoshi-lib", version = "0.23.1" }
tanoshi-vm = { path = "./tanoshi-vm" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
warp = { version = "0.3.1", features = ["compression", "tls"] }
rand = { version = "^0.8" }
log = { version = "*" }
env_logger = "0.8.4"
jsonwebtoken = { version = "7" }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
rust-embed = { version = "5.9", features = ["interpolate-folder-path"] }
mime_guess = "2"
clap = "3.0.0-beta.1"
bytes = "1"
dirs = "3"
base64 = "0.13"
lazy_static = "1.4"
async-graphql = { version = "2.8.4", features = ["apollo_tracing", "chrono"] }
async-graphql-warp = "2.8.4"
sqlx = { version = "0.5.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "chrono",
    "json",
    "migrate",
] }
reqwest = { version = "^0.11", features = ["json", "rustls"] }
ureq = { version = "2", features = ["json"] }
futures = "^0.3"
rust-argon2 = "0.8"
ron = "0.6.4"
fancy-regex = "0.6"
libarchive-rs = { git = "https://github.com/faldez/libarchive-rs", features = [
    "static",
] }

[profile.release]
lto = true
