[workspace]
members = ["crates/*"]
default-members = [
    "crates/tanoshi",
    "crates/tanoshi-cli",
    "crates/tanoshi-lib",
    "crates/tanoshi-notifier",
    "crates/tanoshi-schema",
    "crates/tanoshi-tracker",
    "crates/tanoshi-util",
    "crates/tanoshi-vm",
]

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[profile.release.package.tanoshi-web]
# Optimize wasm build for size
# Strip symbols breaks wasm opt https://github.com/rust-lang/rust/issues/93294
opt-level = "s"
