[package]
name = "tanoshi-cli"
version = "0.1.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
tanoshi-lib = "0.23.0"
log = { version="*" }
env_logger = "0.8.4"
ron = "0.6.4"
ureq = { version = "2", features = ["json"] }
