[package]
name = "tanoshi-lib"
version = "0.12.1"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi library"
repository= "https://github.com/faldez/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["model", "rest", "extensions"]
model = []
rest = ["model"]
extensions = ["model"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = "1.3"
serde_yaml = "0.8"
dirs = "3"

[build-dependencies]
rustc_version = "0.2"