[package]
name = "tanoshi-lib"
version = "0.22.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi library"
repository= "https://github.com/faldez/tanoshi/tanoshi-lib"
license = "MIT"
readme = "README.md"
exclude = [
    ".github/*"
]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
ron = "0.6.4"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
rustc_version = "0.4.0"