[package]
name = "tanoshi-util"
version = "0.1.2"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi Utilities"
repository = "https://github.com/faldez/tanoshi/tanoshi-util"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib", version = "0.23.3" }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

[features]
# internal feature used for testing (do not rely on this!):
__test = ["reqwest"]
