[package]
name = "tanoshi-vm"
version = "0.1.2"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi VM"
repository= "https://github.com/faldez/tanoshi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib", version = "0.23.2" }
tokio = { version="1", features=["full"] }
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
serde = { version="1.0", features=["derive"] }
ron = "0.6.4"
bytes = "1"
ureq = { version = "2", features = ["json"] }
log = "0.4.14"
env_logger = "0.9.0"