[package]
name = "tanoshi-vm"
version = "0.3.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi VM"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[features]
default = ["cranelift", "universal"]
cranelift = ["wasmer-compiler-cranelift"]
llvm = ["wasmer-compiler-llvm"]
universal = []
dylib = ["wasmer-engine-dylib"]
disable-compiler = []

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib", version = "0.24.0" }
tanoshi-util = { path = "../tanoshi-util", version = "0.2.0", features = [
    "host",
] }
tokio = { version = "1", features = ["full"] }
wasmer = "2.0.0"
wasmer-compiler-cranelift = { version = "2.0.0", optional = true }
wasmer-compiler-llvm = { version = "2.0.0", optional = true }
wasmer-engine-dylib = { version = "2.0.0", features = [
    "compiler",
], optional = true }
wasmer-wasi = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
bytes = "1"
ureq = { version = "2", features = ["json"] }
log = "0.4.14"
env_logger = "0.9.0"
