[package]
name = "tanoshi-web"
version = "0.5.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "*", optional = true }
wee_alloc = { version = "*"}
yew = {version="0.16"}
yew-router = {version="0.13"}
failure = "*"
serde = "*"
serde_json ="1"
serde_urlencoded = "0.6"
http = "*"
log = "0.4"
wasm-logger = "0.2"
enclose = "*"
anyhow = "1"
quote = "1"
jsonwebtoken = "7"
js-sys = "*"
chrono = { version = "0.4", features = ["serde"] }
tanoshi-lib = {git = "https://github.com/fadhlika/tanoshi-lib", branch = "master", features=["model"]}

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'Cache',
  'CacheStorage',
  'EventSource',
  'MessageEvent',
  'Location'
]

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

