[package]
name = "tanoshi-web"
version = "0.11.1"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi Web"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4"}
yew = {version="0.17"}
yew-router = {version="0.14"}
serde = "1"
serde_json ="1"
serde_urlencoded = "0.6"
http = "0.2"
log = "0.4"
wasm-logger = "0.2"
anyhow = "1"
quote = "1"
js-sys = "0.3 "
chrono = { version = "0.4", features = ["serde"] }
tanoshi-lib = {path = "../tanoshi-lib", features = ["rest"]}

[dependencies.ring]
version = "0.16.15"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'Url',
  'Cache',
  'CacheStorage',
  'EventSource',
  'MessageEvent',
  'Location',
  'FocusEvent'
]

[dev-dependencies]
wasm-bindgen-test = "*"

