[package]
name = "tanoshi-web"
version = "0.25.5"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi Web"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1"
dominator = "^0.5"
log = "0.4"
wasm-logger = "0.2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
graphql_client = { version = "^0.10", features = ["reqwest"] }
wasm-bindgen = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
futures-signals = "^0.3"
futures = "^0.3"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
reqwest = { version = "^0.11", features = ["json"] }
base64 = "0.13"

[dependencies.web-sys]
version = "^0.3"
features = [
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'Url',
  'Cache',
  'CacheStorage',
  'EventSource',
  'MessageEvent',
  'Location',
  'FocusEvent',
  'ErrorEvent',
  'Storage',
  'PopStateEvent',
  'MediaQueryList',
]

[dev-dependencies]
wasm-bindgen-test = "*"

[build-dependencies]
npm_rs = "0.1.1"
