[package]
name = "tanoshi"
version = "0.7.0"
authors = ["fadhlika"]
edition = "2018"
description = "Tanoshi"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = {version = "0.8"}
ureq = { version = "*", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.6"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
warp = {version = "0.2", features = ["compression"]}
rust-argon2 = {version = "0.8"}
rand = {version = "0.7"}
log = {version = "*"}
pretty_env_logger = {version = "0.4"}
jsonwebtoken = {version = "7"}
chrono = { version = "0.4", features = ["serde"] }
futures = {version = "*"}
anyhow = "1"
libloading = {version = "0.6"}
rust-embed= {version="5.5.1"}
mime_guess = "2"
clap = "3.0.0-beta.1"
bytes = "0.5"
dirs = "2.0.2"
rusqlite = {version = "0.23", features=["bundled", "chrono", "serde_json", "url", "array", "modern_sqlite"]}
tbot = "0.6"
base64 = "0.12"