[package]
name = "tanoshi"
version = "0.8.2"
authors = ["fadhlika"]
edition = "2018"
description = "Tanoshi"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = {version = "0.8"}
ureq = { version = "1.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
warp = {version = "0.2", features = ["compression"]}
rust-argon2 = {version = "0.8"}
rand = {version = "0.7"}
log = {version = "*"}
pretty_env_logger = {version = "0.4"}
jsonwebtoken = {version = "7"}
chrono = { version = "0.4", features = ["serde"] }
futures = {version = "0.3"}
anyhow = "1"
libloading = {version = "0.6"}
rust-embed= {version="5.5.1"}
mime_guess = "2"
clap = "3.0.0-beta.1"
bytes = "0.5"
dirs = "2.0.2"
rusqlite = {version = "0.23", features=["bundled", "chrono", "serde_json", "url", "array", "modern_sqlite"]}
tbot = "0.6"
base64 = "0.12"
lazy_static = "1.4"