[package]
name = "tanoshi-cli"
version = "0.6.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi CLI Utilities"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib", version = "0.27.0" }
tanoshi-vm = { path = "../tanoshi-vm", version = "0.7.1" }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.6", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.14" }
env_logger = "0.9.0"
