[package]
name = "tanoshi-cli"
version = "0.7.0"
edition = "2024"
rust-version = "1.85.0"
description = "Tanoshi CLI Utilities"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib" }
tanoshi-vm = { path = "../tanoshi-vm" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4" }
env_logger = "0.11"
