[package]
name = "tanoshi-lib"
version = "0.27.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi library"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

[features]

[dependencies]
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
rustc_version = "0.4"
