[package]
name = "tanoshi-lib"
version = "0.38.0"
edition = "2024"
rust-version = "1.93.1"
description = "Tanoshi library"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

[features]

[dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"

[build-dependencies]
rustc_version = "0.4"
