[package]
name = "tanoshi-notifier"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["auto-send", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
log = { version = "0.4" }
async-trait = "0.1"

[dev-dependencies]
insta = "1"
