[package]
name = "tanoshi-notifier"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = { version = "0.4" }
async-trait = "0.1"
