[package]
name = "tanoshi-schema"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.14"
serde = { version = "1.0", features = ["derive", "rc"] }
futures-signals = "0.3"
