[package]
name = "tanoshi-app"
version = "0.37.1"
default-run = "tanoshi-app"
edition = "2021"
rust-version = "1.90.0"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.3", features = ["rustls-tls"] }
tanoshi = { path = "../tanoshi", default-features = false, features = [
    "server",
] }
tanoshi-vm = { path = "../tanoshi-vm", default-features = false }
tanoshi-tracker = { path = "../tanoshi-tracker" }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
