[package]
name = "tanoshi-tracker"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "4.1.0", features = ["pkce-plain"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
async-trait = "0.1"
thiserror = "1"
