[package]
name = "tanoshi-util"
version = "0.3.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi Utilities"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
log = "0.4.14"
ron = "0.6.4"

[features]
host = ["ureq"]
# internal feature used for testing (do not rely on this!):
__test = ["ureq"]
