[package]
name = "tanoshi-util"
version = "0.3.0"
edition = "2024"
description = "Tanoshi Utilities"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[features]
host = ["ureq"]
# internal feature used for testing (do not rely on this!):
__test = ["ureq"]
