[package]
name = "tanoshi-vm"
version = "0.7.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi VM"
repository = "https://github.com/faldez/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib", version = "0.27.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bytes = "1"
log = "0.4.14"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "json",
] }
lazy_static = "1"
fnv = "1"
libloading = "0.7.2"
once_cell = "1.9.0"

[dev-dependencies]
env_logger = "0.9.0"
