[package]
name = "tanoshi-vm"
version = "0.7.2"
edition = "2021"
description = "Tanoshi VM"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
log = { version = "0.4" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "json",
    "rustls-tls",
] }
fnv = "1"
libloading = "0.8"
once_cell = "1"

[dev-dependencies]
env_logger = "0.11"
