[package]
name = "tanoshi-vm"
version = "0.8.0"
edition = "2024"
rust-version = "1.90.0"
description = "Tanoshi VM"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
log = { version = "0.4" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "json",
    "rustls",
] }
fnv = "1"
libloading = "0.9"
once_cell = "1"

[dev-dependencies]
env_logger = "0.11"
