[package]
name = "tanoshi-web"
version = "0.0.0"
edition = "2021"
description = "Tanoshi Web"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-schema = { path = "../tanoshi-schema" }
console_error_panic_hook = "0.1"
dominator = "0.5"
log = { version = "0.4" }
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["serde"] }
graphql_client = "0.13"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures-signals = "0.3"
futures = "0.3"
js-sys = "0.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
gloo-timers = "0.2"
anyhow = "1"
ws_stream_wasm = "0.7"
async_executors = { version = "0.7", features = ["async_std"] }
graphql-ws-client = { version = "0.9", features = [
  "client-graphql-client",
  "ws_stream_wasm",
] }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCollection',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'Url',
  'UrlSearchParams',
  'Cache',
  'CacheStorage',
  'EventSource',
  'MessageEvent',
  'Location',
  'FocusEvent',
  'ErrorEvent',
  'Storage',
  'PopStateEvent',
  'MediaQueryList',
  'MediaQueryListEvent',
  'Navigator',
  'ServiceWorkerContainer',
  'Notification',
  'NotificationPermission',
  'NotificationOptions',
]

[dev-dependencies]
wasm-bindgen-test = "*"
