[package]
name = "tanoshi-web"
version = "0.0.0"
edition = "2021"
description = "Tanoshi Web"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tanoshi-schema = { path = "../tanoshi-schema" }
console_error_panic_hook = "0.1"
dominator = "0.5"
log = { version = "0.4" }
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["serde"] }
graphql_client = "0.14"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures-signals = "0.3"
futures = "0.3"
js-sys = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
gloo-timers = { version = "0.3", features = ["futures"] }
anyhow = "1"
ws_stream_wasm = "0.7"
graphql-ws-client = { version = "0.10", features = ["client-graphql-client", "ws_stream_wasm"] }

[dependencies.web-sys]
version = "0.3"
features = ["Cache", "CacheStorage", "CssStyleDeclaration", "Document", "ErrorEvent", "EventSource", "FocusEvent", "HtmlCollection", "HtmlImageElement", "HtmlOptionElement", "HtmlSelectElement", "Location", "MediaQueryList", "MediaQueryListEvent", "MessageEvent", "Navigator", "Notification", "NotificationOptions", "NotificationPermission", "PopStateEvent", "ServiceWorkerContainer", "Storage", "Url", "UrlSearchParams", "Window"]
