[package]
name = "tanoshi"
version = "0.33.0"
edition = "2021"
description = "Tanoshi"
repository = "https://github.com/luigi311/tanoshi"
license = "MIT"


[lib]
name = "tanoshi"
path = "src/lib.rs"

[[bin]]
name = "tanoshi"
path = "bin/tanoshi.rs"
test = false
bench = false

[features]
default = ["embed", "server"]
embed = ["rust-embed"]
server = ["axum", "headers", "http", "async-graphql-axum", "tower-http"]

[dependencies]
tanoshi-lib = { path = "../tanoshi-lib" }
tanoshi-vm = { path = "../tanoshi-vm" }
tanoshi-tracker = { path = "../tanoshi-tracker" }
tanoshi-notifier = { path = "../tanoshi-notifier" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.11"
bincode = "1"
async-graphql = { version = "7", features = [
    "apollo_tracing",
    "chrono",
    "dataloader",
    "log",
] }
async-graphql-axum = { version = "7", optional = true }
axum = { version = "0.7.5", optional = true }
axum-extra = { version = "0.9.3", features = [ "typed-header" ]}
headers = { version = "0.4", optional = true }
http = { version = "1", optional = true }
tower-http = { version = "0.5", features = [
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
], optional = true }
rand = { version = "0.8" }
log = { version = "0.4" }
env_logger = "0.11"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
rust-embed = { version = "8", features = [
    "interpolate-folder-path",
], optional = true }
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
bytes = "1"
dirs = "5"
base64 = "0.22"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
    "json",
    "migrate",
] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
rust-argon2 = "1"
fancy-regex = "0.13"
compress-tools = { git = "https://github.com/luigi311/compress-tools-rs", features = [
    "static",
] }
zip = { version = "2", default-features = false }
phf = { version = "0.11", features = ["macros"] }
human-sort = "0.2"
aes = "0.8"
cbc = "0.1"
once_cell = "1"
async-trait = "0.1"
itertools = "0.13"
rayon = "1.10"
flume = "0.11"
